--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,13 @@
             "email": "longxin1104@163.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {}
+    "minimum-stability": "dev-master",
+    "require": {
+		"php": ">=5.4.0"
+	},
+    "autoload": {
+        "psr-4": {
+            "Fahim\\PaypalIPN\\": "src/"
+        }
+    }
 }
