--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "longxin1104@163.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
 		"php": ">=5.4.0"
 	},
