--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
     "require": {
 		"php": ">=5.4.0"
 	},
+	"require-dev": {},
     "autoload": {
         "psr-4": {
             "StoneLon\\PaypalIpn\\": "src/"
         }
-    }
+    } 
 }
